[build-system]
requires = ["setuptools==70.0.0", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "MAST3R-SLAM"
version = "0.0.1"
dependencies = [
    "numpy==1.26.4",
    "editables",
    "einops",
    "pyrealsense2",
    "evo",
    "natsort",
    "torchcodec==0.1",
    "lietorch @ git+https://github.com/princeton-vl/lietorch.git",
    "plyfile",
    "torch>=2.4.1",
    "in3d",
    "mast3r",
    ]


[tool.setuptools.packages.find]
where = ["."]
include = ["mast3r_slam"]
namespaces = false

[tool.uv.sources]
in3d = { path = "thirdparty/in3d" }
mast3r = { path = "thirdparty/mast3r"}

[tool.uv]
no-build-isolation-package = ["torch"]